--- a/src/CardPresenter.css
+++ b/src/CardPresenter.css
@@ -1,11 +1,22 @@
 .card {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.card-image {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
+    bottom: 15vmin;
+    left: 2.5vmin;
+    position: absolute;
+    right: 2.5vmin;
+    top: 2.5vmin;
 }
 
-.card-text {
-    bottom: 5vmin;
+.card-label {
+    bottom: 3.5vmin;
     color: white;
     font-size: 10vmin;
     font-weight: bold;
@@ -17,4 +28,11 @@
     right: 0;
     text-align: center;
     text-shadow: 0 0 2vmin #000000;
+}
+
+.card-text {
+    font-family: Arial, sans-serif;
+    font-size: 80vmin;
+    font-weight: bold;
+    text-transform: uppercase;
 }
