--- a/src/MenuScreen.css
+++ b/src/MenuScreen.css
@@ -47,8 +47,8 @@
 }
 
 .menu-screen-tile-label {
-    font-size: 2.5vh;
-    font-weight: 300;
+    font-size: 2vmax;
+    font-weight: 400;
     margin-top: 2vh;
     text-align: center;
     text-transform: uppercase;
