--- a/src/CardPresenter.css
+++ b/src/CardPresenter.css
@@ -16,11 +16,15 @@
 }
 
 .card-label {
-    bottom: 3.5vmin;
+    align-items: center;
+    bottom: 2.5vmin;
     color: white;
+    display: flex;
+    flex-direction: column;
     font-size: 10vmin;
     font-weight: bold;
     height: 10vmin;
+    justify-content: center;
     left: 0;
     letter-spacing: 0.5vmin;
     line-height: 10vmin;
@@ -34,5 +38,19 @@
     font-family: Arial, sans-serif;
     font-size: 80vmin;
     font-weight: bold;
+    text-transform: uppercase;
+}
+
+.card-label input {
+    background: transparent;
+    box-shadow: 0 0 3pt rgb(0, 0, 0, 0.25);
+    border: 1pt solid rgb(255, 255, 255, 0.25);
+    color: white;
+    font-size: 6vmin;
+    height: 9vmin;
+    outline: none;
+    padding: 0 2vmin;
+    text-align: center;
+    text-shadow: 0 0 2vmin #000000;
     text-transform: uppercase;
 }
